<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Our Goals</string>

    <!-- StartActivity -->
    <string name="our_goals">Our Goals</string>

    <!-- LogInActivity -->
    <string name="logging_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logIn_enter">Sign in</string>
    <string name="registration">Registration</string>
    <string name="your_email">Email</string>
    <string name="your_login">Nickname</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="start_as_a_guest">Continue as a guest</string>

<!--    user name-->
    <string name="username_guest" tools:ignore="MissingTranslation">Guest</string>

<!--    default categories titles-->
    <array name="default_categories_titles">
        <item>Health</item>
        <item>Education</item>
        <item>Finances</item>
        <item>Hobbies</item>
    </array>

    <!-- GuideActivity -->
    <string name="guide">Guide</string>
    <string name="guide_pre_text">Take training to learn all the features of the application and use it to the maximum extent possible to achieve your goals</string>
    <string name="skipGuide">Skip</string>
    <string name="beginGuide">Begin</string>
    <string name="next">Next</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="test_title">Test Title</string>
    <string name="test_title2">Test Title2</string>
    <string name="test_guide_fraze">Test super important fraze at the middle</string>
    <string name="test_guide_text">test text test text test text test text test texttest text test text test text test text test text test text test text test text test text test text test text test text</string>
    <string name="finishGuide">Finish</string>

    <!-- Bottom navigation menu items -->
    <string name="my_goals">Goals</string>
    <string name="categories">Categories</string>
    <string name="analytics">Analytics</string>

    <!-- Adding new Goal -->
    <string name="tasks">Tasks</string>

    <!-- Texts for Help section -->
    <string name="help1">Add new goals and achieve them. You can create a goal and break it down into tasks, or create a goal without tasks.</string>
    <string name="help2">Create your own category and personalize it to your taste.</string>
    <string name="help3">Create goals with your friends by specifying "Team" when creating. You can track the progress of friends by clicking on the icon at the top of the goal.</string>
    <string name="help4">Analyze your progress in the Analytics section.</string>

<!--    admob ids-->
    <string name="fullscreen_banner_id">ca-app-pub-5612258819688229/7538676802</string>
    <string name="admob_id">ca-app-pub-5612258819688229~5104085151</string>

<!-- sorting list in toolbar-->
    <string name="all_categories">All categories</string>

<!--    dialog - adding category-->
    <string name="new_category_title">New Category</string>
    <string name="new_category_text">Title:</string>
    <string name="new_category_hint">New Category</string>
    <string name="new_category_background">Background:</string>
    <string name="new_category_cancel">Cancel</string>
    <string name="new_category_finish">Create</string>
    <string name="add_category_edditing">Editing</string>
    <string name="add_category_newCategory">New Category</string>
    <string name="add_category_chooseImage">Choose image</string>

<!--    Colorpicker dialog-->
    <string name="colorpicker_choose">Choose</string>

<!--    find friends dialog-->
    <string name="find_friends_title">Find Friends</string>
    <string name="find_friends_subtitle">find friends by name</string>
    <string name="find_friends_username_hint">Username</string>

<!--    add goal friends dialog-->
    <string name="add_goal_friends_title">Friends</string>
    <string name="add_goal_friends_subtitle">Achieve goals together</string>
    <string name="add_goal_friends_back">Back</string>
    <string name="add_goal_friends_complete">Complete</string>

<!--    add goal main dialog-->
    <string name="add_goal_main_title">New Goal</string>
    <string name="add_goal_main_text">Title:</string>
    <string name="add_goal_main_text_hint">I want…</string>
    <string name="add_goal_main_category">Category:</string>
    <string name="add_goal_main_category_hint">Category</string>
    <string name="add_goal_main_social">Team:</string>
    <string name="add_goal_main_cancel">Cancel</string>
    <string name="add_goal_main_next">Next</string>

<!--    add goal tasks dialog-->
    <string name="add_goal_tasks_newTask">New task</string>
    <string name="add_goal_tasks_back">Back</string>
    <string name="add_goal_tasks_complete">Complete</string>
    <string name="add_goal_teamInfoSnackbar">Create goals with your friends to achieve goals together</string>
    <string name="item_task_text_hint">Description</string>
    <string name="item_task_date_hint">Date</string>
    <string name="item_task_addButton">Add</string>


<!--    analytics section-->
    <string name="analytics_goalsAchieved">Goals achieved</string>
    <string name="analytics_goalsSet">Goals set</string>
    <string name="analytics_tasksComplete">Tasks completed</string>
    <string name="analytics_tasksSet">Tasks set</string>

<!--    friends dialog-->
    <string name="friends_title">Your Friends</string>
    <string name="friends_subtitle">Achieve goals together</string>
    <string name="friends_removeFromFriends" tools:ignore="MissingTranslation">Unfriend</string>

<!--    friends progress dialog-->
    <string name="friends_progress">Friends progress</string>

<!--    notifications dialog-->
    <string name="notifications_title">Notifications</string>

<!--    support developer dialog-->
    <string name="developer_thanks_p1">Many thanks to everyone who supports this free project! If you find any defects in the application, you can contact us at the contacts listed in the Play Market, or leave a comment.</string>
    <string name="developer_thanks_p2">You can support this project simply by watching ads by clicking on the button below. Thank!</string>
    <string name="developer_thanks_seeAd">Watch</string>

<!--    adding friends dialog-->
    <string name="add_friends_waitingResponse">Waiting \n response</string>
    <string name="add_friends_cancelRequest">Cancel \n request</string>

<!--    item goal-->
    <string name="item_goal_complete">Complete</string>

<!--    notifications dialog-->
    <string name="notification_acceptRequest">Accept \n request</string>
    <string name="notification_declineRequest">Decline \n request</string>
    <string name="notification_details">Details</string>
    <string name="notification_friendsReqAccepted">Friends request accepted</string>
    <string name="notification_friendsReqDeclined">Friends request declined</string>
    <string name="notification_goal_textPropose">" proposes team goal"</string>
    <string name="notification_goal_accepted">" accepted your goal"</string>
    <string name="notification_goal_declined">" declined your goal"</string>

<!--    side navigation items-->
    <string name="side_navigation_myGoals">My Goals</string>
    <string name="side_nav_teamGoals">Team Goals</string>
    <string name="side_nav_myFriends">My Friends</string>
    <string name="side_nav_addFriend">Add Friend</string>
    <string name="side_nav_notif">Notifications</string>
    <string name="side_nav_help">Help</string>
    <string name="side_nav_supportDev">Support Developer</string>
    <string name="side_nav_logOut">Log out</string>
    <string name="side_nav_signIn">Log in</string>

<!--    section title-->
    <string name="section_title_myGoals">My Goals</string>
    <string name="section_title_teamGoals">Team Goals</string>
    <string name="section_title_categories">Categories</string>
    <string name="section_title_analytics">Analytics</string>

<!--    toast messages-->
    <string name="toast_loggedOut">Logged out</string>
    <string name="toast_ad_downloadError">Loading ad failed</string>
    <string name="toast_nowYouFriend">Now you are friends!</string>
    <string name="toast_reqDeclined">Request declined</string>
    <string name="toast_notifDeleted">Notification deleted</string>
    <string name="toast_teamGoalAdded">Goal added to Team Goals!</string>
    <string name="toast_goalCompleted">Goal completed!</string>
    <string name="toast_goalDeleted">Goal deleted!</string>
    <string name="toast_chooseOneFriend">Choose at least 1 friend</string>
    <string name="toast_finishTastEdit">Finish task editing</string>
    <string name="toast_enterGoalText">Enter goal text</string>
    <string name="toast_chooseCategory">Select a category</string>
    <string name="toast_requestSent">Request sent</string>
    <string name="toast_reqCanceled">Request canceled</string>
    <string name="toast_friendDeleted">Deleted</string>
    <string name="toast_addCategoryTitle">Enter category title!</string>
    <string name="toast_differPasswords">Different passwords. Confirm entered password.</string>
    <string name="toast_enterEmail">Enter email</string>
    <string name="toast_enterUsername">Enter username</string>
    <string name="toast_enterPassword">Enter password</string>
    <string name="toast_confirmPassword">Confirm entered password</string>
    <string name="toast_usernameExists">This username already exists</string>
    <string name="toast_userRegestered">Successfully registered! The confirmation message was sent to your email</string>
    <string name="toast_registrError">Registration error!</string>
    <string name="Toast_accountNotFound">Sign in error. Account not found.</string>
    <string name="toast_accountNotConfError">Sign in error. Account not confirmed.</string>
    <string name="toast_networkError">No network connection.</string>
    <string name="toast_reqError">Request error</string>

<!--    name for teal goal category-->
    <string name="category_name">Team</string>

<!--    confirmation dialogs-->
    <string name="dialog_confirmAction">Confirm action</string>
    <string name="dialog_deleteGoal">Are ou sure you want to delete this goal?</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_completeGoal">Are ou sure you want to complete this goal?</string>
    <string name="dialog_completeGoalButton">Complete</string>
    <string name="dialog_deleteCategory">Are ou sure you want to delete this category?</string>

    <string name="add_friend_sendReq" tools:ignore="MissingTranslation">Send
        request</string>


</resources>
