<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_side_my_goals"
            android:title="@string/side_navigation_myGoals"
            android:icon="@drawable/icon_my_goals" />
        <item android:id="@+id/nav_side_social_goals"
            android:title="@string/side_nav_teamGoals"
            android:icon="@drawable/icon_social_goals"/>
        <item
            android:id="@+id/nav_side_friends"
            android:title="@string/side_nav_myFriends"
            android:icon="@drawable/icon_my_friends"/>
        <item android:id="@+id/nav_side_add_friends"
            android:title="@string/side_nav_addFriend"
            android:icon="@drawable/icon_nav_add_friend"/>
        <item android:id="@+id/nav_side_notifications"
            android:title="@string/side_nav_notif"
            android:icon="@drawable/icon_notifications"
            android:actionLayout="@layout/badge_notifications" />
        <item android:id="@+id/nav_side_help"
            android:title="@string/side_nav_help"
            android:icon="@drawable/icon_info"/>
        <item android:id="@+id/nav_side_support_dev"
            android:title="@string/side_nav_supportDev"
            android:icon="@drawable/icon_support_developer"/>
        <item android:id="@+id/nav_side_log_out"
            android:title="@string/side_nav_logOut"/>
    </group>
</menu>