<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".guide.ActivityGuide">

    <FrameLayout
        android:id="@+id/guideFragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/skipButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/skipGuide"/>
    <Button
        android:id="@+id/backButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/back"
        android:visibility="gone"/>
    <Button
        android:id="@+id/startButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/beginGuide"
        app:icon="@drawable/arrow_right"
        app:iconGravity="end" />
    <Button
        android:id="@+id/nextButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/next"
        app:icon="@drawable/arrow_right"
        app:iconGravity="end" />
    <Button
        android:id="@+id/finishButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/finishGuide" />



</androidx.constraintlayout.widget.ConstraintLayout>