<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/guideBlock1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/guideTitle1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_alignTop="@id/guideImage1"
            android:text="@string/test_title"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/guideText1"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_alignTop="@id/guideImage1"
            android:text="@string/test_guide_text"/>

        <ImageView
            android:id="@+id/guideImage1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/logo"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/guideKeyInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@+id/guideBlock1"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:id="@+id/guideFraze"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:text="@string/test_guide_fraze"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/guideBlock2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guideKeyInfoLayout">
        <TextView
            android:id="@+id/guideTitle2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/guideImage2"
            android:text="@string/test_title"
            android:textAlignment="textEnd"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/guideText2"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/guideImage2"
            android:text="@string/test_guide_text"/>

        <ImageView
            android:id="@+id/guideImage2"
            android:layout_width="150dp"
            android:layout_height="150dp"

            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/logo"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>